--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-* {
+*{
     margin: 0;
     box-sizing: border-box;
 }
 
-.tiktok{
-    background-color: #FF2c55;
-    
+body {
+    font-family: Arial, Helvetica, 
+    sans-serif;
+}
+
+.virsraksts{
+    color:#6C63FF;
+    font-size:48px;
+    font-weight: bold;
+
 }
