--- a/style.css
+++ b/style.css
@@ -4,13 +4,21 @@
 }
 
 body {
-    font-family: Arial, Helvetica, 
-    sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .virsraksts{
-    color:#6C63FF;
-    font-size:48px;
+    color: #6C63FF;
+    font-size: 48px;
     font-weight: bold;
+}
 
+.forma{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
