--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .virsraksts{
-    color: #6C63FF;
+    color: #9D97FF;
     font-size: 48px;
     font-weight: bold;
 }
@@ -22,3 +22,27 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+.emaillabel{
+    color:#9D97FF;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.inputContainer{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.input{
+    height: 60px;
+    border-radius: 10px;
+    border: 2px solid #797979;
+}
+
+.checkbox{
+    height: 20px;
+    width: 20px;
+}
+.rememberMe{}
